--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;700&family=Lexend+Deca:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
@@ -21,7 +20,7 @@
       <h1 class="car-type">Sedans</h1>
       <p class="description">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
       or on your next road trip.</p>
-      <button class="details">Learn More</button>
+      <button class="details sedan">Learn More</button>
     </div>
 
     <div class="card suv">
@@ -29,7 +28,7 @@
       <h1 class="car-type">SUVs</h1>
       <p class="description">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
       and off-road adventures.</p>
-      <button class="details">Learn More</button>
+      <button class="details suv">Learn More</button>
     </div>
 
     <div class="card luxury">
@@ -37,7 +36,7 @@
       <h1 class="car-type">Luxury</h1>
       <p class="description">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
       rental and arrive in style.</p>
-      <button class="details">Learn More</button>
+      <button class="details luxury">Learn More</button>
     </div>
     
   </main>
